Add api plain validation errors messages
