# docs/openapi_v1.json
@@ -77,7 +77,7 @@
                   "locale": {
                     "description": "locale",
                     "type": "string",
-                    "enum": ["en"]
+                    "enum": ["cs", "en"]
                   },
                   "terms_accepted": {
                     "description": "accept terms",
@@ -191,7 +191,7 @@
                     "description": "password",
                     "type": "string",
                     "format": "password",
-                    "pattern": ".*",
+                    "pattern": ".+",
                     "minLength": 1,
                     "maxLength": 1024
                   }
@@ -490,7 +490,7 @@
                   "locale": {
                     "description": "locale",
                     "type": "string",
-                    "enum": ["en"]
+                    "enum": ["cs", "en"]
                   }
                 }
               }
@@ -533,7 +533,6 @@
         "description": "slug",
         "type": "string",
         "format": "identifier",
-        "pattern": ".+",
         "minLength": 1,
         "maxLength": 255
       },
@@ -644,7 +643,7 @@
                   "locale": {
                     "description": "locale",
                     "type": "string",
-                    "enum": ["en"]
+                    "enum": ["cs", "en"]
                   },
                   "created_at": {
                     "description": "date-time of creation",
@@ -730,7 +729,7 @@
         "required": ["status", "code"],
         "properties": {
           "internal": {
-            "description": "debug only message, internal use only",
+            "description": "debug only message, internal use only, do not expose to users!",
             "type": "string"
           },
           "status": {
@@ -759,8 +758,176 @@
                 "additionalProperties": {
                   "type": "array",
                   "items": {
-                    "description": "human readable validation error",
-                    "type": "string"
+                    "description": "computer readable validation error, do not expose to users",
+                    "type": "string",
+                    "pattern": "^[_a-z]+(:[^;]+(;[^;]+)?)?$",
+                    "enum": [
+                      "isin",
+                      "iban",
+                      "bic",
+                      "hexcolor",
+                      "creditcard",
+                      "isbn",
+                      "username",
+                      "htmlclean",
+                      "domainname",
+                      "jwt",
+                      "imei",
+                      "macaddress",
+                      "slug",
+                      "semver",
+                      "luhn",
+                      "base64",
+                      "issn",
+                      "lowercase",
+                      "uppercase",
+                      "titlecase",
+                      "snakecase",
+                      "kebabcase",
+                      "camelcase",
+                      "cidr",
+                      "datauri",
+                      "ulid",
+                      "ean",
+                      "gtin",
+                      "postalcode",
+                      "mimetype",
+                      "authorized",
+                      "enum",
+                      "model_ids",
+                      "country_code",
+                      "currency",
+                      "delimited_unique",
+                      "delimited_min",
+                      "delimited_max",
+                      "auth_failed",
+                      "auth_password",
+                      "auth_throttle",
+                      "passwords_reset",
+                      "passwords_sent",
+                      "passwords_throttled",
+                      "passwords_token",
+                      "passwords_user",
+                      "accepted",
+                      "accepted_if",
+                      "active_url",
+                      "after",
+                      "after_or_equal",
+                      "alpha",
+                      "alpha_dash",
+                      "alpha_num",
+                      "array",
+                      "before",
+                      "before_or_equal",
+                      "between_array",
+                      "between_file",
+                      "between_numeric",
+                      "between_string",
+                      "boolean",
+                      "confirmed",
+                      "current_password",
+                      "date",
+                      "date_equals",
+                      "date_format",
+                      "declined",
+                      "declined_if",
+                      "different",
+                      "digits",
+                      "digits_between",
+                      "dimensions",
+                      "distinct",
+                      "doesnt_end_with",
+                      "doesnt_start_with",
+                      "email",
+                      "ends_with",
+                      "exists",
+                      "file",
+                      "filled",
+                      "gt_array",
+                      "gt_file",
+                      "gt_numeric",
+                      "gt_string",
+                      "gte_array",
+                      "gte_file",
+                      "gte_numeric",
+                      "gte_string",
+                      "image",
+                      "in",
+                      "in_array",
+                      "integer",
+                      "ip",
+                      "ipv4",
+                      "ipv6",
+                      "json",
+                      "lt_array",
+                      "lt_file",
+                      "lt_numeric",
+                      "lt_string",
+                      "lte_array",
+                      "lte_file",
+                      "lte_numeric",
+                      "lte_string",
+                      "mac_address",
+                      "max_array",
+                      "max_file",
+                      "max_numeric",
+                      "max_string",
+                      "max_digits",
+                      "mimes",
+                      "mimetypes",
+                      "min_array",
+                      "min_file",
+                      "min_numeric",
+                      "min_string",
+                      "min_digits",
+                      "multiple_of",
+                      "not_in",
+                      "not_regex",
+                      "numeric",
+                      "password_letters",
+                      "password_mixed",
+                      "password_numbers",
+                      "password_symbols",
+                      "password_uncompromised",
+                      "present",
+                      "prohibited",
+                      "prohibited_if",
+                      "prohibited_unless",
+                      "prohibits",
+                      "regex",
+                      "required",
+                      "required_array_keys",
+                      "required_if",
+                      "required_unless",
+                      "required_with",
+                      "required_with_all",
+                      "required_without",
+                      "required_without_all",
+                      "same",
+                      "size_array",
+                      "size_file",
+                      "size_numeric",
+                      "size_string",
+                      "starts_with",
+                      "string",
+                      "timezone",
+                      "unique",
+                      "uploaded",
+                      "url",
+                      "uuid",
+                      "prohibited_with",
+                      "prohibited_with_all",
+                      "prohibited_without",
+                      "prohibited_without_all",
+                      "null_with",
+                      "null_with_all",
+                      "null_without",
+                      "null_without_all",
+                      "strlen",
+                      "strlen_max",
+                      "strlen_min",
+                      "null"
+                    ]
                   }
                 }
               }
