# lang/cs/auth_api.php
@@ -1,0 +1,20 @@
+<?php
+
+declare(strict_types=1);
+
+return [
+    /*
+    |--------------------------------------------------------------------------
+    | Authentication Language Lines
+    |--------------------------------------------------------------------------
+    |
+    | The following language lines are used during authentication for various
+    | messages that we need to display to the user. You are free to modify
+    | these language lines according to your application's requirements.
+    |
+    */
+
+    'failed' => 'auth_failed',
+    'password' => 'auth_password',
+    'throttle' => 'auth_throttle',
+];
