# lang/cs/passwords_api.php
@@ -1,0 +1,22 @@
+<?php
+
+declare(strict_types=1);
+
+return [
+    /*
+    |--------------------------------------------------------------------------
+    | Password Reset Language Lines
+    |--------------------------------------------------------------------------
+    |
+    | The following language lines are the default lines which match reasons
+    | that are given by the password broker for a password update attempt
+    | has failed, such as for an invalid token or invalid new password.
+    |
+    */
+
+    'reset' => 'passwords_reset',
+    'sent' => 'passwords_sent',
+    'throttled' => 'passwords_throttled',
+    'token' => 'passwords_token',
+    'user' => 'passwords_user',
+];
