# lang/en/validation_api.php
@@ -1,0 +1,156 @@
+<?php
+
+declare(strict_types=1);
+
+return [
+    /*
+    |--------------------------------------------------------------------------
+    | Validation Language Lines
+    |--------------------------------------------------------------------------
+    |
+    | The following language lines contain the default error messages used by
+    | the validator class. Some of these rules have multiple versions such
+    | as the size rules. Feel free to tweak each of these messages here.
+    |
+    */
+
+    'accepted' => 'accepted',
+    'accepted_if' => 'accepted_if::other;:value',
+    'active_url' => 'active_url',
+    'after' => 'after::date',
+    'after_or_equal' => 'after_or_equal::date',
+    'alpha' => 'alpha',
+    'alpha_dash' => 'alpha_dash',
+    'alpha_num' => 'alpha_num',
+    'array' => 'array',
+    'before' => 'before::date',
+    'before_or_equal' => 'before_or_equal::date',
+    'between' => [
+        'array' => 'between_array::min;:max',
+        'file' => 'between_file::min;:max',
+        'numeric' => 'between_numeric::min;:max',
+        'string' => 'between_string::min;:max',
+    ],
+    'boolean' => 'boolean',
+    'confirmed' => 'confirmed',
+    'current_password' => 'current_password',
+    'date' => 'date',
+    'date_equals' => 'date_equals::date',
+    'date_format' => 'date_format::format',
+    'declined' => 'declined',
+    'declined_if' => 'declined_if::other;:value',
+    'different' => 'different::other',
+    'digits' => 'digits::digits',
+    'digits_between' => 'digits_between::min;:max',
+    'dimensions' => 'dimensions',
+    'distinct' => 'distinct',
+    'doesnt_end_with' => 'doesnt_end_with::values',
+    'doesnt_start_with' => 'doesnt_start_with::values',
+    'email' => 'email',
+    'ends_with' => 'ends_with::values',
+    'enum' => 'enum',
+    'exists' => 'exists',
+    'file' => 'file',
+    'filled' => 'filled',
+    'gt' => [
+        'array' => 'gt_array::value',
+        'file' => 'gt_file::value',
+        'numeric' => 'gt_numeric::value',
+        'string' => 'gt_string::value',
+    ],
+    'gte' => [
+        'array' => 'gte_array::value',
+        'file' => 'gte_file::value',
+        'numeric' => 'gte_numeric::value',
+        'string' => 'gte_string::value',
+    ],
+    'image' => 'image',
+    'in' => 'in',
+    'in_array' => 'in_array::other',
+    'integer' => 'integer',
+    'ip' => 'ip',
+    'ipv4' => 'ipv4',
+    'ipv6' => 'ipv6',
+    'json' => 'json',
+    'lt' => [
+        'array' => 'lt_array::value',
+        'file' => 'lt_file::value',
+        'numeric' => 'lt_numeric::value',
+        'string' => 'lt_string::value',
+    ],
+    'lte' => [
+        'array' => 'lte_array::value',
+        'file' => 'lte_file::value',
+        'numeric' => 'lte_numeric::value',
+        'string' => 'lte_string::value',
+    ],
+    'mac_address' => 'mac_address',
+    'max' => [
+        'array' => 'max_array::max',
+        'file' => 'max_file::max',
+        'numeric' => 'max_numeric::max',
+        'string' => 'max_string::max',
+    ],
+    'max_digits' => 'max_digits::max',
+    'mimes' => 'mimes::values',
+    'mimetypes' => 'mimetypes::values',
+    'min' => [
+        'array' => 'min_array::min',
+        'file' => 'min_file::min',
+        'numeric' => 'min_numeric::min',
+        'string' => 'min_string::min',
+    ],
+    'min_digits' => 'min_digits::min',
+    'multiple_of' => 'multiple_of::value',
+    'not_in' => 'not_in',
+    'not_regex' => 'not_regex',
+    'numeric' => 'numeric',
+    'password' => [
+        'letters' => 'password_letters',
+        'mixed' => 'password_mixed',
+        'numbers' => 'password_numbers',
+        'symbols' => 'password_symbols',
+        'uncompromised' => 'password_uncompromised',
+    ],
+    'present' => 'present',
+    'prohibited' => 'prohibited',
+    'prohibited_if' => 'prohibited_if::other;:value',
+    'prohibited_unless' => 'prohibited_unless::other;:values',
+    'prohibits' => 'prohibits::other',
+    'regex' => 'regex',
+    'required' => 'required',
+    'required_array_keys' => 'required_array_keys::values',
+    'required_if' => 'required_if::other;:value',
+    'required_unless' => 'required_unless::other;:values',
+    'required_with' => 'required_with::values',
+    'required_with_all' => 'required_with_all::values',
+    'required_without' => 'required_without::values',
+    'required_without_all' => 'required_without_all::values',
+    'same' => 'same::other',
+    'size' => [
+        'array' => 'size_array::size',
+        'file' => 'size_file::size',
+        'numeric' => 'size_numeric::size',
+        'string' => 'size_string::size',
+    ],
+    'starts_with' => 'starts_with::values',
+    'string' => 'string',
+    'timezone' => 'timezone',
+    'unique' => 'unique',
+    'uploaded' => 'uploaded',
+    'url' => 'url',
+    'uuid' => 'uuid',
+
+    'prohibited_with' => 'prohibited_with::values',
+    'prohibited_with_all' => 'prohibited_with_all::values',
+    'prohibited_without' => 'prohibited_without::values',
+    'prohibited_without_all' => 'prohibited_without_all::values',
+    'null_with' => 'null_with::values',
+    'null_with_all' => 'null_with_all::values',
+    'null_without' => 'null_without::values',
+    'null_without_all' => 'null_without_all::values',
+    'strlen' => 'strlen::size',
+    'strlen_max' => 'strlen_max::max',
+    'strlen_min' => 'strlen_min::min',
+    'null' => 'null',
+];
